ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: frontend-service
                port:
                  number: 5173
